--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -1,3 +1,6 @@
+dynuUpdater.App.level=FINE
+dynuUpdater.DynuClient.level=FINE
 handlers=java.util.logging.ConsoleHandler
+java.util.logging.ConsoleHandler.level=FINEST
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.SimpleFormatter.format=[%1$tF %1$tT] [%4$-7s] %5$s %n
